--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,21 @@
     <artifactId>Parser</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <targetPath>../resources</targetPath>
+            </resource>
+        </resources>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.gmaven</groupId>
+                <artifactId>gmaven-plugin</artifactId>
+            </plugin>
+
+        </plugins>
+        <sourceDirectory>src/main/groovy</sourceDirectory>
+    </build>
+
 </project>
