--- a/pom.xml
+++ b/pom.xml
@@ -9,16 +9,18 @@
     <version>1.0-SNAPSHOT</version>
 
     <build>
-        <resources>
+       <resources>
             <resource>
-                <directory>src/main/resources</directory>
+                <directory>src/main/java/resources</directory>
                 <targetPath>../resources</targetPath>
             </resource>
         </resources>
         <plugins>
+
             <plugin>
                 <groupId>org.codehaus.gmaven</groupId>
                 <artifactId>gmaven-plugin</artifactId>
+                <version> 1.2</version>
             </plugin>
 
         </plugins>
